--- a/src/main/fabric8/pod.yaml
+++ b/src/main/fabric8/pod.yaml
@@ -1,11 +1,6 @@
 spec:
   template:
     spec:
-      initContainers:
-        - name: carga
-          command: ["sh", "-c", "chown -R 200:200 /media"]
-          volumeMounts:
-            - mountPath: /media
-              name: volume-9wbrl
-            - mountPath: /afp
-              name: volume-9wbrl
+      containers:
+        securityContext:
+          privileged: true
